Fix content styles on mobile

--- a/assets/styles/components/section.styl
+++ b/assets/styles/components/section.styl
@@ -50,4 +50,13 @@
   .section {
     padding: 1rem 2rem;
   }
+
+  .section-row {
+    flex-direction: column;
+
+    .section-col {
+      max-width: 100%;
+      margin-bottom: 1rem;
+    }
+  }
 }
